log
Thu 04 May 2023 11:01:12 PM UTC: 
 sudoku.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:69:1: error: control reaches end of non-void function [-Werror=return-type]
   69 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
90e85e2
